--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 pod-mode.el - A major mode for editing .pod-files in (X)Emacs
 
-It mainly defines a grammar for syntax highlighting.
-(POD is the Plain Old Documentation format of Perl.)
+POD is the Plain Old Documentation format of Perl.
+This mode mainly defines a grammar for syntax highlighting.
 
 -------------------------------------------------------------
 
@@ -27,11 +27,12 @@ into your ~/.emacs
 -------------------------------------------------------------
 
 Author:  Steffen Schwigon <schwigon@webit.de>
-Version: 0.1
+
+Version: 0.2
 License: GPL
-Tested:  i386-linux      with XEmacs    21.4
-         i386-linux      with GNU Emacs 21.2.1
-         i386-windows-xp with XEmacs    21.4
+Tested:  i386-linux       with XEmacs    21.4
+         i386-linux       with GNU Emacs 21.2.1
+         i386-windows-w2k with XEmacs    21.4
 
 This mode is built with help of the
 "Emacs language mode creation tutorial" at
@@ -44,5 +45,6 @@ Regexes are defined for the following font-lock-faces:
   font-lock-comment-face
   font-lock-reference-face
   font-lock-doc-string-face
+  font-lock-function-name-face
 
 I'm interested in comments/enhancements/bugfixes.
