--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-27  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.501
+	* fixed link to the Emacs Language Mode Creation Tutorial
+	(after resurrecting and hosting it)
+	* fiddle with META.yml to help the indexer
+
 2008-05-20  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.5
