Import of SCHWIGON/pod-mode-0.502 from CPAN.
gitpan-cpan-distribution: pod-mode
gitpan-cpan-version:      0.502
gitpan-cpan-path:         SCHWIGON/pod-mode/pod-mode-0.502.tgz
gitpan-cpan-author:       SCHWIGON
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-15  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.502
+
+	* more meta fiddling, although it still ignores the "abstract:"
+
 2008-07-27  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.501
