--- a/README
+++ b/README
@@ -1,41 +1,14 @@
-pod-mode.el - A major mode for editing .pod-files in (X)Emacs
 
-POD is the Plain Old Documentation format of Perl.
-This mode mainly defines a grammar for syntax highlighting.
 
--------------------------------------------------------------
+This archive contains the distribution pod-mode,
+version 1.02:
 
-Usage:
+  Emacs major mode for editing .pod-files
 
-Put "pod-mode.el" into your load-path and the following
-into your ~/.emacs:
+This software is Copyright (c) 2010 by Steffen Schwigon.
 
-  (require 'pod-mode)
+This is free software, licensed under:
 
-To associate pod-mode with .pod files add the following
-into your ~/.emacs
+  The GNU General Public License, Version 2, June 1991
 
-  (setq auto-mode-alist
-    (append auto-mode-alist
-      '(("\\.pod$" . pod-mode))))
 
-To automatically turn on font-lock-mode add the following
-into your ~/.emacs
-
-  (add-hook 'pod-mode-hook 'font-lock-mode)
-
--------------------------------------------------------------
-
-Author:  Steffen Schwigon <ss5@renormalist.net>
-License: GPL
-Tested:  i386-linux       with XEmacs    21.4
-         i386-windows-w2k with XEmacs    21.4
-         i386-linux       with GNU Emacs 21.2.1
-         i386-linux       with GNU Emacs 23
-
-This mode is built with help of the "Emacs language mode creation
-tutorial" written by Scott Andrew Borton, now hosted at
-
-  http://renormalist.net/Renormalist/EmacsLanguageModeCreationTutorial
-
-I'm interested in comments/enhancements/bugfixes.
